--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -26,6 +26,7 @@
           <tr>
             <th scope="col">Short URL</th>
             <th scope="col">Long URL</th>
+            <th scope="col">Edit</th>
             <th scope="col">Delete</th>
           </tr>
         </thead>
@@ -34,9 +35,28 @@
           <tr>
             <td><%= url %></td>
             <td><%= urls[url] %></td>
+
+            <td>
+              <a href="/urls/<%= url %>">
+                <button
+                  type="submit"
+                  class="btn btn-primary"
+                  style="background-color:white; border-color:blue; color:blue;"
+                >
+                  Edit
+                </button>
+              </a>
+            </td>
+
             <td>
               <form method="POST" action="/urls/<%=url%>/delete">
-                <button type="submit" class="btn btn-primary">Delete</button>
+                <button
+                  type="submit"
+                  class="btn btn-primary"
+                  style="background-color: white; border-color: red; color: red;"
+                >
+                  Delete
+                </button>
               </form>
             </td>
           </tr>
