--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -18,5 +18,27 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
+    <% if(username === undefined) { %>
+    <form class="form-inline" action="/login" method="POST">
+      <div class="form-group mb-2">
+        <!-- <label for="longURL">Username:</label> -->
+        <input
+          class="form-control"
+          type="text"
+          placeholder="Username"
+          name="username"
+          style="width: 300px; margin: 1em"
+        />
+        <button type="submit" class="btn btn-primary">Login</button>
+      </div>
+    </form>
+    <% } else { %>
+    <form class="form-inline" action="/logout" method="POST">
+      <div class="form-group mb-2">
+        <label for="username">Logged in as: <%= username %></label>
+        <button type="submit" class="btn btn-primary">Logout</button>
+      </div>
+    </form>
+    <% } %>
   </nav>
 </header>
