--- a/views/urls_registration.ejs
+++ b/views/urls_registration.ejs
@@ -1,13 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <style>
-      form {
-        align-items: center;
-        justify-content: center;
-      }
-    </style>
-
     <!-- Bootstrap CSS -->
     <link
       rel="stylesheet"
@@ -15,7 +8,8 @@
       integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
       crossorigin="anonymous"
     />
-    <title>URL - TinyApp Example</title>
+
+    <title>New URL - TinyApp Example</title>
   </head>
 
   <body>
@@ -23,29 +17,35 @@
     <div class="card text-center">
       <div class="card-header"></div>
       <div class="card-body">
-        <h5 class="card-title">TinyURL for: <%= longURL %></h5>
-        <p class="card-text">
-          Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a>
-        </p>
-      </div>
-      <div></div>
+        <h5><%= username %></h5>
+        <p class="card-text"></p>
 
-      <div class="card-footer text-muted">
-        <h5 class="card-title">Edit</h5>
-        <form class="form-inline" action="/urls/<%= shortURL %>" method="POST">
+        <h3>Create Your Account</h3>
+        <form class="form-inline" action="/register" method="POST">
           <div class="form-group mb-2">
-            <label for="longURL">New URL:</label>
+            <label for="email">Email Address:</label>
             <input
               class="form-control"
-              type="text"
-              name="longURL"
-              placeholder="http://"
+              name="email"
+              type="email"
+              placeholder="Enter email"
               style="width: 300px; margin: 1em"
             />
-            <button type="submit" class="btn btn-primary">Submit</button>
+
+            <label for="password">Password:</label>
+            <input
+              class="form-control"
+              name="password"
+              type="password"
+              placeholder="Password"
+              style="width: 300px; margin: 1em"
+            />
+
+            <button type="submit" class="btn btn-primary">Register</button>
           </div>
         </form>
       </div>
+      <div class="card-footer text-muted"></div>
     </div>
     <!-- Bootstrap JS -->
     <script
