--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -17,7 +17,7 @@
     <div class="card text-center">
       <div class="card-header"></div>
       <div class="card-body">
-        <h5><%= username %></h5>
+        <h5><%= user %></h5>
         <p class="card-text"></p>
 
         <h3>Login</h3>
