--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -21,7 +21,7 @@
         <p class="card-text"></p>
 
         <h3>Login</h3>
-        <form class="form-inline" action="/register" method="POST">
+        <form class="form-inline" action="/login" method="POST">
           <div class="form-group mb-2">
             <label for="email">Email Address:</label>
             <input
