--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -23,9 +23,10 @@
     <div class="card text-center">
       <div class="card-header"></div>
       <div class="card-body">
-        <h5 class="card-title">TinyURL for: <%= longURL %></h5>
+        <h5 class="card-title">TinyURL for: <%= longURL["longURL"] %></h5>
         <p class="card-text">
-          Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a>
+          Short URL:
+          <a href="<%= longURL[`longURL`] %>"><%= shortURL %></a>
         </p>
       </div>
       <div></div>
