--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -26,7 +26,7 @@
         <h5 class="card-title">TinyURL for: <%= longURL["longURL"] %></h5>
         <p class="card-text">
           Short URL:
-          <a href="<%= longURL[`longURL`] %>"><%= shortURL %></a>
+          <a href="<%= longURL.longURL %>"><%= shortURL %></a>
         </p>
       </div>
       <div></div>
